# web-app-hub

./: CHANGELOG.md  Cargo.toml
assets/desktop/: org.pvermeer.WebAppHub.metainfo.xml
workspaces/app/src/application/pages/web_apps/: web_app_view.rs
