[workspace]
members = ["workspaces/app", "workspaces/common", "workspaces/tools"]
resolver = "3"

[workspace.package]
name = "web-app-hub"
version = "0.9.0"
edition = "2024"
description = "Create web apps with ease"
license = "GPL-3.0-only"
authors = ["PVermeer"]
repository = "https://github.com/pvermeer/web-app-hub"
homepage = "https://github.com/pvermeer/web-app-hub"
documentation = "https://github.com/pvermeer/web-app-hub"

[workspace.dependencies]
common = { path = "workspaces/common" }
anyhow = "1.0.100"
chrono = "0.4.42"
clap = "4.5.53"
freedesktop-desktop-entry = "0.7.19"
fs_extra = "1.3.0"
git-cliff = "2.11.0"
gtk = { version = "0.10.1", features = ["v4_10"], package = "gtk4" }
include_dir = "0.7.4"
libadwaita = { version = "0.8.1", features = ["v1_7"] }
rand = "0.8.5"
regex = "1.12.2"
rust-i18n = "3.1.5"
sanitize-filename = "0.6.0"
scraper = { version = "0.25.0", features = ["atomic"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
ureq = { version = "3.1.4", features = ["gzip"] }
url = "2.5.7"
